# docs/openapi.yml
@@ -128,7 +128,6 @@ paths:
 
         '400':
           description: Invalid username/password supplied
-
   /users/{id}:
     get:
       tags:
@@ -249,7 +248,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-    
   /posts:
     post:
       tags:
@@ -308,7 +306,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
   /posts/{id}:
     put:
       tags:
@@ -335,7 +332,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/EditError'
-
   /posts/{postId}/comments:
     post:
       tags:
@@ -407,7 +403,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
   /posts/{postId}/like:
     post:
       tags:
@@ -446,7 +441,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
   /posts/comments/{commentId}/like:
     post:
       tags:
@@ -486,6 +480,46 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /profile/{id}:
+    get:
+      tags:
+        - user
+      summary: Get user profile by user id
+      description: ''
+      operationId: getProfileByID
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: 'The name that needs to be fetched. Use user1 for testing. '
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/User'
+        '400':
+          description: fail
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: fail
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /logs:
     post:
