# src/routes/profile.js
@@ -1,0 +1,9 @@
+import { Router } from 'express'
+import { getById } from '../controllers/user.js'
+import { validateAuthentication } from '../middleware/auth.js'
+
+const router = Router()
+
+router.get('/:id', validateAuthentication, getById)
+
+export default router
